# latam-data-challenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
diagram/: architecture.txt
exploration/: explore_tweets_q1.py  explore_tweets_q2.py  explore_tweets_q3.py
notebooks/: challenge_analysis.ipynb
src/: config.json  main.py  q1_memory.py  q1_time.py  q2_memory.py  q2_time.py  q3_memory.py  q3_time.py  utils.py
terraform/: Makefile  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/.github/workflows/: cicd.yml
terraform/modules/bigquery/dataset/: main.tf  output.tf  variables.tf
terraform/modules/bigquery/tables/: main.tf  output.tf  variables.tf
terraform/modules/bigquery/tables/tables_schemas/: q2_results.json  q3_results.json
terraform/modules/bucket/: main.tf  outputs.tf  variables.tf
terraform/modules/serviceAccount/: main.tf  outputs.tf  variables.tf
tests/: test_q1.py  test_q2.py  test_q3.py  test_utils.py
